refact: 방장 퇴장시 방장 변경 기능